--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -4,4 +4,9 @@ This file is generated automatically.
 All changes will be overwritten by build process. */
 @import "global.scss";
 @import "author.scss";
+@import "bg.scss";
+@import "footer.scss";
 @import "forms.scss";
+@import "nav.scss";
+@import "pagination.scss";
+@import "post.scss";
